--- a/public/upi.html
+++ b/public/upi.html
@@ -19,6 +19,11 @@
 
       <label for="customerName">Customer Name</label>
       <input type="text" id="customerName" name="customerName" placeholder="Enter your name" required>
+     
+           <label for="customerName">Problem / Complaint</label>
+
+      
+      <textarea name="" id="" cols="33" rows="5"></textarea>
 
       <label for="bankName">Bank Name</label>
       <input type="text" id="bankName" name="bankName" placeholder="Enter bank name" required>
